[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/NumberEdit.gd" type="Script" id=1]

[node name="NumberEdit" type="LineEdit"]
caret_blink = true
caret_blink_interval = 0.5
script = ExtResource( 1 )

[connection signal="focus_entered" from="." to="." method="select_all"]
[connection signal="focus_exited" from="." to="." method="force_int"]
[connection signal="text_submitted" from="." to="." method="force_int"]
